# btd2-hook

./: .gitignore  .gitmodules  CMakeLists.txt  Inject.ps1  playground.py  readme.md
docs/: index.md
docs/nk_api/: api-storage.md  api-user.md  index.md
docs/storage/: profile.md
injector/: main.cpp
scripts/: Eject.ps1
src/: game_event.cpp  game_event.h  game_event_generated.cpp  game_event_generated.h  hook.cpp  hook.h  hook_win32_x64.asm  log.cpp  log.h  main.cpp  mem.cpp  mem.h  payload_buffer.cpp  payload_buffer.h  reflang.cpp  reflang.h  ui.cpp  ui.h  util.cpp  util.h
src/hooks/: http.cpp  http.h  protocol.cpp  protocol.h  reflang.cpp  reflang.h
